# code_snips

./: README.md  Untitled Diagram.drawio
01-error_handle/: error_report.c
02-robustIO/: rio.c
03-network/01-raw_echo/: server.c
03-network/02-openfd/: README.md  misc.c
03-network/echo_using_muduo/: CMakeLists.txt  echo.cpp
RIO/: rio.h  test.c
error_handle/: error_report.h
network/echo/: CMakeLists.txt  client.c
network/openfd/: CMakeLists.txt  client.c  misc.h  server.c
network/openfd/lib/: openfd.c  openfd.h
robustIO/: CMakeLists.txt
